--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,10 +5,12 @@ authors = ["ananas-dev <lucienfiorini@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
+actix = "0.11"
 actix-web = "3"
 actix-cors = "0.5"
+actix-session = "0.4"
+serde = "1.0"
 env_logger = "0.8"
-serde = "1.0.103"
-serde_json = "1.0.44"
-serde_derive = "1.0.103"
-juniper = "0.14.0"
+juniper = "0.15.3"
+juniper_actix = "0.2"
+mongodb = "1.2"
