--- a/client/package.json
+++ b/client/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "ui",
-  "version": "0.1.0",
+  "name": "svelte-app",
+  "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public",
+    "validate": "svelte-check"
+  },
   "devDependencies": {
-    "@types/d3": "^6.3.0",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^14.14.35",
-    "sass": "^1.32.8",
-    "solid-js": "^0.24.15",
-    "solid-scripts": "^0.0.54",
-    "typescript": "^4.2.3"
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0",
+    "svelte-check": "^1.0.0",
+    "svelte-preprocess": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "typescript": "^4.0.0",
+    "tslib": "^2.0.0",
+    "@tsconfig/svelte": "^1.0.0",
+    "@types/d3": "^6.3.0"
   },
   "dependencies": {
-    "@lubert/chess.ts": "^0.15.1",
-    "d3": "^6.6.0"
-  },
-  "scripts": {
-    "start": "solid-scripts start",
-    "build": "solid-scripts build",
-    "test": "solid-scripts test"
-  },
-  "browserslist": [
-    "Chrome 74",
-    "Firefox 63",
-    "Safari 11",
-    "Edge 17",
-    "Node 10"
-  ]
+    "sirv-cli": "^1.0.0",
+    "d3": "^6.6.1",
+    "chess.ts": "^1.0.5"
+  }
 }
