--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,20 +1,6 @@
 {
-  "compilerOptions": {
-    "target": "es2015",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js"
-  },
-  "files": ["./node_modules/solid-scripts/types/solid-app.d.ts"],
-  "include": ["src"]
+  "extends": "@tsconfig/svelte/tsconfig.json",
+
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
