--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,22 +40,23 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            #root   /usr/share/nginx/html;
+            #index  index.html index.htm;
+	          proxy_pass http://0.0.0.0:3000;
         }
 
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
         #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
+        #error_page   500 502 503 504  /50x.html;
+        #location = /50x.html {
+        #    root   /usr/share/nginx/html;
+        #}
 
-	location /api/ {
-	    proxy_pass http://127.0.0.1:5000;
-	}
+	      location /api/ {
+	          proxy_pass http://0.0.0.0:5000;
+	      }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
