--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -1,4 +1,4 @@
-#user html;
+user www-data;
 worker_processes  1;
 
 #error_log  logs/error.log;
@@ -15,7 +15,7 @@ events {
 
 http {
     include       mime.types;
-    default_type  application/octet-stream;
+    #default_type  application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
@@ -29,11 +29,15 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    gzip  on;
+    gzip             on;
+    gzip_comp_level  2;
+    gzip_min_length  1000;
+    gzip_proxied     expired no-cache no-store private auth;
+    gzip_types       text/plain application/x-javascript text/xml text/css application/xml;
 
     server {
-        listen       80;
-        server_name  localhost;
+        listen 80;
+        server_name localhost 127.0.0.1;
 
         #charset koi8-r;
 
@@ -42,9 +46,14 @@ http {
         location / {
             #root   /usr/share/nginx/html;
             #index  index.html index.htm;
-	          proxy_pass http://0.0.0.0:3000;
+	        proxy_pass http://deltachess-client:3000;
+            proxy_set_header X-Forwarded-For $remote_addr;
         }
 
+	    location /api/ {
+	        proxy_pass http://deltachess-server:5000;
+            proxy_set_header X-Forwarded-For $remote_addr;
+	    }
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
@@ -54,9 +63,6 @@ http {
         #    root   /usr/share/nginx/html;
         #}
 
-	      location /api/ {
-	          proxy_pass http://0.0.0.0:5000;
-	      }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
