--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -14,7 +14,7 @@ events {
 
 
 http {
-    include       mime.types;
+    #include       mime.types;
     #default_type  application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -23,7 +23,7 @@ http {
 
     #access_log  logs/access.log  main;
 
-    sendfile        on;
+    #sendfile        on;
     #tcp_nopush     on;
 
     #keepalive_timeout  0;
@@ -44,8 +44,6 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            #root   /usr/share/nginx/html;
-            #index  index.html index.htm;
 	        proxy_pass http://deltachess-client:3000;
             proxy_set_header X-Forwarded-For $remote_addr;
         }
